fix new spacing options for mobile layouts

--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -274,6 +274,11 @@ Custom media queries
 	.col-lg-20 {
 		width: 100%;
 	}
+
+	.site-content {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
 // Small devices (landscape phones, less than 768px)
