--- a/style.css
+++ b/style.css
@@ -13180,6 +13180,11 @@ Custom media queries
   .col-lg-20 {
     width: 100%;
   }
+
+  .site-content {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 @media (max-width: 768px) {
   .hidden-xs {
